# academic-literature-rag

./: .env.example  README.md  pyproject.toml
docs/adr/: 0001-modular-monolith.md
src/academic_literature_rag/: __init__.py
src/academic_literature_rag/connectors/: arxiv.py  protocols.py  semantic_scholar.py
src/academic_literature_rag/database/: models.py  session.py
src/academic_literature_rag/identity/: matching.py  normalizers.py
src/academic_literature_rag/models/: canonical_paper.py  chunk_embedding.py  paper_candidate.py  pdf_asset.py  pdf_page_text.py  rag_answer.py  retrieval_result.py  search_run.py  semantic_search_result.py  text_chunk.py
src/academic_literature_rag/repositories/: canonical_paper_repository.py  chunk_embedding_repository.py  pdf_asset_repository.py  pdf_page_text_repository.py  search_run_repository.py  source_paper_repository.py  text_chunk_repository.py
src/academic_literature_rag/retrieval/: vector_math.py
src/academic_literature_rag/services/: chunk_embedding_service.py  embedding_client.py  generation_client.py  pdf_download_service.py  pdf_text_extraction_service.py  pending_pdf_download_service.py  persisted_retrieval_service.py  rag_answer_service.py  rag_prompt_builder.py  retrieval_service.py  semantic_search_service.py  text_chunking_service.py  text_cleaning_service.py
src/academic_literature_rag/storage/: raw_response_store.py
tests/fixtures/: arxiv_search.xml  semantic_scholar_search.json
tests/unit/: test_smoke.py
tests/unit/connectors/: test_arxiv.py  test_semantic_scholar.py
(+26 files in other folders)
